fix match endpoint
